r2e-compile-tests/compile-fail/grpc_intercept_missing_dep.stderr
error[E0277]: type `AuditSink` was not provided to the AppBuilder
  --> compile-fail/grpc_intercept_missing_dep.rs:57:38
   |
57 |             .register_grpc_service::<PingService>()
   |                                      ^^^^^^^^^^^ missing `.provide::<AuditSink>()` or `.register::<AuditSink>()`
   |
   = help: the trait `Contains<AuditSink, _>` is not implemented for `HNil`
   = note: every dependency must be provided or registered as a bean before calling `build_state()`
help: the following other types implement trait `Contains<H, Idx>`
  --> $WORKSPACE/r2e-core/src/type_list.rs
   |
   | impl<H, T> Contains<H, Here> for TCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<H, T>` implements `Contains<H, Here>`
...
   | impl<H, X, T, I> Contains<H, There<I>> for TCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<X, T>` implements `Contains<H, There<I>>`
...
   | impl<H, T> Contains<H, Here> for HCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<H, T>` implements `Contains<H, Here>`
   | impl<H, X, T, I> Contains<H, There<I>> for HCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<X, T>` implements `Contains<H, There<I>>`
   = note: required for `TCons<AuditSink, TNil>` to implement `AllSatisfied<HNil, (_, ())>`
note: required by a bound in `register_grpc_service`
  --> $WORKSPACE/r2e-grpc/src/lib.rs
   |
   |     fn register_grpc_service<S>(self) -> Self
   |        --------------------- required by a bound in this associated function
...
   |         S::Deps: AllSatisfied<T, DepIdx>;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AppBuilderGrpcExt::register_grpc_service`
